turtleart.housetree.HouseTree.scala.error
Compilation error:
HouseTree:2: error: '(' expected but identifier found.
  for i (<- 0 to 3) {
      ^HouseTree:8: error: illegal start of simple expression
}
^